--- a/proyectos/componentes/src/app/app.component.html
+++ b/proyectos/componentes/src/app/app.component.html
@@ -16,7 +16,11 @@
       a las clases y condicionan
       el comportaminto de estas 
       depenmdiendo de las propiedades
-      este tenga.-->
+      este tenga.
+    
+    todo componente para que funcione debe
+  estar registrado en  el appmodules.ts 
+ ese ese el modulo principal  -->
 <div style="text-align:center">
   <h1>
    angular4 dice {{ title }}!
